# Quasar-LOB

./: .gitignore  CMakeLists.txt  README.md
include/: exchange_simulator.hpp  limit_order_book.hpp  market_data_publisher.hpp  matching_engine.hpp  memory_pool.hpp  metrics.hpp  risk_manager.hpp  strategy.hpp  strategy_market_making.hpp  strategy_mean_reversion.hpp  strategy_momentum.hpp  types.hpp
python/backtest/: engine.py
src/: CMakeLists.txt  benchmark_main.cpp  matching_engine_main.cpp  zmq_deps.cmake
tests/: CMakeLists.txt  main.cpp  matching_engine_test.cpp
